--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,9 +1,11 @@
 name: emoji_picker_flutter_example
 description: Demonstrates how to use the emoji_picker_flutter plugin.
-publish_to: 'none'
+publish_to: "none"
+
+version: 2.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
