--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
+  cached_network_image: ^3.3.1
   flutter:
     sdk: flutter
   flutter_web_plugins:
